--- a/src/Light.Abp.DicManagement.Application.Contracts/Light.Abp.DicManagement.Application.Contracts.csproj
+++ b/src/Light.Abp.DicManagement.Application.Contracts/Light.Abp.DicManagement.Application.Contracts.csproj
@@ -3,13 +3,18 @@
   <Import Project="..\..\common.props" />
   
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Light.Abp.DicManagement</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Authorization" Version="4.0.0" />
-    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="4.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="5.3.3" />
+    <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="5.3.3" />
+    <PackageReference Update="Fody" Version="6.6.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
