--- a/src/Light.Abp.DicManagement.Application/Light.Abp.DicManagement.Application.csproj
+++ b/src/Light.Abp.DicManagement.Application/Light.Abp.DicManagement.Application.csproj
@@ -4,13 +4,17 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Light.Abp.DicManagement</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.0.0" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.3" />
+    <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.3.3" />
+    <PackageReference Update="Fody" Version="6.6.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
